# pdum_dsl

./: AGENTS.md  README.md  data.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
archive/: README.md  demo_sketch.py
archive/marimo/: MARIMO_ANYWIDGET_NOTES.md  demo_marimo_asymmetry.py
design/: Generative Julia.ipynb  closure_specialization.md  combinators-notes.md  deep-learning-notes.md  dsl_caching_layer.md  implementation-plan.md  proposed-architecture.md
design/archive/: README.md
design/archive/marimo/: demo_marimo.py  marimo-anywidget-asymmetry.md
design/marimo/: demo.ipynb  demo_marimo_reactivity.py  widget.py
design/research/: J1-maintainer.md  J2-performance.md  J3-pragmatist.md  P1-jax-school.md  P3-nanopass-school.md  R2-dace.md  R4-jax.md  R5-kernel-dsls.md  R6-torch.md  R8-user-types.md  R9-tstrings.md  V1-frontend.md  V2-ir.md  V3-hooks.md  V4-marshaling.md  V5-transforms.md
docs/: desiderata.md  index.md  reference.md
docs/book/: GLOSSARY.md  ch00-thesis.ipynb  ch01-types-are-values.ipynb  ch02-what-a-closure-is.ipynb  ch03-one-compile-per-signature.ipynb  ch04-pipelines-are-values.ipynb  ch05-programs-are-values.ipynb  ch06-everything-is-a-rule.ipynb  ch07-source-to-ir.ipynb  ch07a-lay-of-the-land.ipynb  ch08-one-value-n-parameters.ipynb  ch09-end-to-end-on-cpu.ipynb  ch10-the-gpu-and-the-seam.ipynb  ch11-the-five-surfaces.ipynb  ch11a-lay-of-the-land.ipynb  ch11b-measuring-the-machine.ipynb  ch12-data-and-loops.ipynb  ch12a-lay-of-the-land.ipynb  ch13-transforms-are-rules.ipynb  ch14-arguments-and-the-grid.ipynb
docs/demos/: disk.py
docs/design/: 010_proposed-architecture.md  020_implementation-plan.md  030_deep-learning-notes.md  070_backends-notes.md  090_core-and-extensions.md  100_arrays-and-axes.md  110_transforms-and-derivatives.md  120_events-and-instrumentation.md  130_tensors-tiles-and-over.md  140_critical-assessment-charter.md  160_the-integration.md  170_integration-clean-break.md  180_gpt2-end-to-end.md  190_the-integration-spec.md  195_indexed-computation.md  200_the-spec.md  210_backend-notes.md  README.md
docs/design/history/: 020_implementation-plan.md  040_combinators-notes.md  050_provenance_tracking.md  060_rendering-notes.md  080_backend-organization.md  140_critical-assessment-charter.md  150_critical-assessment-report.md  170_integration-clean-break.md  180_gpt2-end-to-end.md  195_indexed-computation.md
docs/design/research/: R13-cuda-ride-vs-own.md  R14-metal-ride-vs-own.md  R16-invocation-runtime.md  R17-packaging-demos-ci.md  R7-minimal-compilers.md
docs/guide/: designing-a-dsl.md  webgpu-shaders.md
docs/m0/: index.md
docs/m0/guide/: webgpu-shaders.md
docs/m0/reference/: wgsl.md
docs/m0/theory/: caching.md  overview.md  type-system.md
docs/reference/: core.md  frontend.md  runtime.md  wgsl.md
docs/theory/: caching.md  overview.md  type-system.md  wgsl-backend.md
examples/webgpu/: disk_spin.py
explorations/tensorlib/: COMPUTE.md  CONCERNS.md  DESIGN.md  LEAN.md  LEVELS.md  PLACEMENT.md  PROVENANCE.md  README.md  REPRESENTATIONS.md
explorations/tensorlib/notebooks/: 00_units_and_quantities.ipynb  01_buffers_layouts_tensors.ipynb  02_view_ops.ipynb  03_restructuring_ops.ipynb  04_guarded_layouts.ipynb  05_autodiff_cheatsheet.ipynb  06_adjoints_from_scratch.ipynb  07_the_marker_dsl.ipynb  08_fold_tensor_state.ipynb  09_the_model_zoo.ipynb  10_peak_memory.ipynb  11_memory_transformations.ipynb  12_binomial_revolve.ipynb  13_placement.ipynb  nbhelp.py
explorations/tensorlib/tensorlib/: __init__.py  autodiff.py  buffer.py  chart.py  compute.py  dtypes.py  guarded.py  ir.py  layout.py  mdsl.py  memory.py  opcount.py  placement.py  signatures.py  tensor.py  transforms.py  units.py
explorations/tensorlib/tests/: test_autodiff.py  test_axis.py  test_charts.py  test_compute.py  test_fold.py  test_guarded.py  test_ir.py  (+12 more)
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_31b81bb961d8bef1___init___py.html  z_31b81bb961d8bef1_bench_py.html  z_31b81bb961d8bef1_combinators_py.html  z_31b81bb961d8bef1_events_py.html  z_31b81bb961d8bef1_viz_py.html  z_67792ccbae47e141___init___py.html  z_67792ccbae47e141_arrays_py.html  z_67792ccbae47e141_base_lang_py.html  z_67792ccbae47e141_batteries_py.html  z_67792ccbae47e141_surfaces_py.html  z_67792ccbae47e141_transforms_py.html  z_69486bc7df3a4b2c__emit_py.html  z_69486bc7df3a4b2c_c_py.html  z_7b1868a9906006d1___init___py.html  z_7b1868a9906006d1_api_py.html  z_7b1868a9906006d1_cache_py.html  z_7b1868a9906006d1_capture_py.html  z_7b1868a9906006d1_derived_py.html  z_7b1868a9906006d1_events_py.html  z_7b1868a9906006d1_ir_py.html  z_7b1868a9906006d1_lower_py.html  z_7b1868a9906006d1_ops_py.html  z_7b1868a9906006d1_pack_py.html  z_7b1868a9906006d1_printer_py.html  z_7b1868a9906006d1_registry_py.html  z_7b1868a9906006d1_rewrite_py.html  z_7b1868a9906006d1_types_py.html  z_7b1868a9906006d1_valuekind_py.html  z_8baa78c45c7e5977___init___py.html  z_8baa78c45c7e5977_graphics_py.html  z_a65555c09e3c7d13___init___py.html  z_a65555c09e3c7d13_python_py.html  z_a65555c09e3c7d13_wgsl_py.html
reference/: README.md  REVIEW.md
reference/demos/: disk.py
reference/tests/: test_m01_core.py  test_m02_wgsl.py  test_m03_thesis.py  test_m04_inline.py
scripts/: _versioning.py  build.sh  loc_budget.py  nb.sh  publish.sh  release.sh  setup.sh  test_notebooks.sh
scripts/book/: build_chapters.py
tests/: test_array_args.py  test_arrays.py  test_backend_c.py  test_backend_wgsl.py  test_bench.py  test_budgets.py  test_cache.py  test_capture.py  test_combinators.py  test_events.py  test_example.py  test_grid.py  test_ir.py  test_jvp_rules.py  test_lower.py  test_m01_core.py  test_m03_thesis.py  test_pack.py  test_recorder.py  test_refusal_contract.py  test_rewrite.py  test_runtime.py  test_statements.py  test_surfaces.py  test_traced_dispatch.py  test_transforms.py  test_types.py  test_valuekind.py  test_viz.py  test_wgsl_renderer.py
tools/viz-harness/: README.md  make_fixtures.py  package-lock.json  package.json  widgets.test.mjs
(+66 files in other folders)
