[project]
name = "habemus-papadum-dsl"
# Managed by the release workflow (scripts/_versioning.py); between releases it carries a
# "+dev" marker (a PEP 440 local version, which PyPI refuses to upload). Do not hand-edit.
version = "0.0.0+dev"
description = "A Python DSL toolkit"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

authors = [
    { name = "Nehal Patel", email = "nehal@alum.mit.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "glfw>=2.10.0",
    "rendercanvas>=2.6.3",
    "wgpu>=0.31.1",
]

[project.urls]
Homepage = "https://github.com/habemus-papadum/pdum_dsl"
Repository = "https://github.com/habemus-papadum/pdum_dsl"
Documentation = "https://github.com/habemus-papadum/pdum_dsl"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# pdum is a namespace shared with the sibling pdum.* distributions; this one ships the
# pkgutil-style src/pdum/__init__.py (extend_path).
packages = ["src/pdum"]

# --- uv workspace: this repo hosts habemus-papadum-dsl (root) + packages/* ---
# One workspace, one lock. No members yet — the glob is here so adding one (a native
# backend, say) is a pure add: scripts/_versioning.py already discovers members and bumps
# them in lockstep, and the release workflow builds the root package by name.
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
# A workspace member the root depends on is declared here as { workspace = true }.

[dependency-groups]
dev = [
    "hatch>=1.14.2",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-jupyter>=0.25.1",
    "jupyter>=1.1.1",
    "rich>=13.7.1",
    "inquirerpy>=0.3.4",
    "pre-commit>=3.7.0",
    "watchdog>=3.0.0",
    "egglog>=13.2.0",
    "numpy>=2.5.0",
    "xarray>=2026.7.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120
exclude = ["archive"]  # historical material, not maintained code

[tool.ruff.lint.per-file-ignores]
# Battery/overload names (clamp, sqrt, smoothstep, …) are DSL vocabulary
# resolved at lower time through the registry — undefined to static analysis
# BY DESIGN, and the book must show them bare.
"docs/book/*.ipynb" = ["F821"]
"src/pdum/dsl/stdlib/batteries.py" = ["F821"]  # battery cross-refs resolve via the overload table
"src/pdum/dsl/demo/graphics.py" = ["F821"]  # same: sqrt/mix are overload-table names, not globals

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/pdum/dsl"]
relative_files = true
omit = [
    "*/tests/*",
    "*/testing.py",
]
