[project]
# The UNPUBLISHED workspace root (design 200 §2): workspace glue, dev groups, docs tooling.
# The published dists are the members: packages/dsl -> habemus-papadum-dsl (pdum.dsl),
# packages/tensorlib -> habemus-papadum-tl (pdum.tl).
name = "dsl_workspace"
# Managed by the release workflow (scripts/_versioning.py); between releases it carries a
# "+dev" marker (a PEP 440 local version, which PyPI refuses to upload). Do not hand-edit.
version = "0.0.0+dev"
description = "Workspace root for the pdum.dsl / pdum.tl packages (unpublished)"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

authors = [
    { name = "Nehal Patel", email = "nehal@alum.mit.edu" }
]
requires-python = ">=3.14"
dependencies = []

[project.urls]
Homepage = "https://github.com/habemus-papadum/pdum_dsl"
Repository = "https://github.com/habemus-papadum/pdum_dsl"
Documentation = "https://github.com/habemus-papadum/pdum_dsl"


# The root is VIRTUAL (design 200 §2): it is never built or published; it manages the
# workspace env. The members are the packages.
[tool.uv]
package = false

# --- uv workspace: unpublished root + published members under packages/* ---
# One workspace, one lock. Members: packages/dsl (habemus-papadum-dsl), packages/tensorlib
# (habemus-papadum-tl) — versioned and published in LOCKSTEP (scripts/_versioning.py
# discovers members; release.yml builds and publishes all of them in one tagged run).
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
habemus-papadum-dsl = { workspace = true }
habemus-papadum-tl = { workspace = true }

[dependency-groups]
dev = [
    "habemus-papadum-dsl",
    "habemus-papadum-tl",
    "hatch>=1.14.2",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-jupyter>=0.25.1",
    "jupyter>=1.1.1",
    "rich>=13.7.1",
    "inquirerpy>=0.3.4",
    "pre-commit>=3.7.0",
    "watchdog>=3.0.0",
    "egglog>=13.2.0",
    "numpy>=2.5.0",
    "xarray>=2026.7.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint.per-file-ignores]
# Battery/overload names (clamp, sqrt, smoothstep, …) are DSL vocabulary
# resolved at lower time through the registry — undefined to static analysis
# BY DESIGN.
"packages/dsl/src/pdum/dsl/intrinsics.py" = ["F821"]  # battery cross-refs resolve via the overload table
"packages/dsl/tests/*.py" = ["F821"]  # kernels in tests use bare DSL vocabulary
# The tensorlib notebooks are teaching material with their own conventions (00–06
# canonical; 07–13 re-authored or dropped as APIs change during P4–P6).
"packages/tensorlib/notebooks/*.ipynb" = ["E501", "I001", "E402", "E702", "E743"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["packages/dsl/tests", "packages/tensorlib/tests"]
# importlib mode: the two members' suites may share test basenames (test_ir.py)
addopts = "-s --import-mode=importlib"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["packages/dsl/src/pdum/dsl", "packages/tensorlib/src/pdum/tl"]
relative_files = true
omit = [
    "*/tests/*",
    "*/testing.py",
]
